Fix mixins.json and downgrade to java 8 features- maybe